# AravisWrapper

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
camera_reader/: __init__.py  _platform_tag.c  genicam_camera.py  opencv_camera.py  reader.py
camera_reader/_vendor/linux_x86_64/: Aravis-0.8.typelib  libaravis-0.8.so.0.8.20
camera_reader/_vendor/macosx_arm64/: libaravis-0.8.dylib
camera_reader/_vendor/macosx_x86_64/: Aravis-0.8.typelib
camera_reader/_vendor/win_amd64/: Aravis-0.8.typelib
scripts/: aravis-get-agnostic.sh  seed-vendor.sh  stage_runtime.py
