[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camera-reader"
version = "0.1.0"
description = "GenICam camera reader with embedded Aravis runtime with opencv fallback"
authors = [
    { name = "Julien Callens" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.10",
]

[project.urls]
Source = "https://github.com/InViLabUAntwerp/AravisWrapper"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.package-data]
camera_reader = ["_vendor/**/*"]
